[package]
name = "cached"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members=[
    "server",
    "parse",
    "buffer",
    "config",
    "log",
]

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
server = { path="./server" }
local_log = { path="./log" }
log = "0.4"