[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["full"]}
tokio-stream = "0.1.8"
bytes = "1"
parse = { path = "../parse" }
buffer = { path = "../buffer" }
config = { path="../config" }
log = "0.4"